--- a/index.html
+++ b/index.html
@@ -58,9 +58,6 @@
                 </div>
             </div>
         </section>
-
-
-
         <section class="features">
             <div class="section_content">
                 <div class="features_info">
@@ -98,15 +95,70 @@
             </div>
         </section>
 
-
-
-
-
-
-
         <section class="section">
-            asfasf
+            <div class="section_content">
+                <h2 class="choos_title">Why Choose AppBies </h2>
+                <p class="choos_text">Choose your native platform and download the app FREE!</p>
+                <div class="choos_content">
+                    <div class="choos_text-block">
+                        <div class="choos_block-left">
+                            <h3 class="choos_content-name">Clean code and responsive</h3>
+                            <p class="choos_content-text">
+                                Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
+                                leousce viverraelnteger.
+                            </p>
+                        </div>
+                        <div class="choos_block-left">
+                            <h3 class="choos_content-name">CSS3 animations</h3>
+                            <p class="choos_content-text">
+                                Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
+                                leousce viverraelnteger.
+                            </p>
+                        </div>
+                        <div class="choos_block-left">
+                            <h3 class="choos_content-name">Gorgeous design</h3>
+                            <p class="choos_content-text">
+                                Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
+                                leousce viverraelnteger.
+                            </p>
+                        </div>
+                    </div>
+                    <img src="./assets/choose.png" alt="choose" class="choose_img">
+                    <div class="choos_text-block">
+                        <div class="choos_block-right">
+                            <h3 class="choos_content-name">Gorgeous design</h3>
+                            <p class="choos_content-text">
+                                Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
+                                leousce viverraelnteger.
+                            </p>
+                        </div>
+                        <div class="choos_block-right">
+                            <h3 class="choos_content-name">Express layout</h3>
+                            <p class="choos_content-text">
+                                Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
+                                leousce viverraelnteger.
+                            </p>
+                        </div>
+                        <div class="choos_block-right">
+                            <h3 class="choos_content-name">EASY TO CUSTOMIZE</h3>
+                            <p class="choos_content-text">
+                                Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
+                                leousce viverraelnteger.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
+
+
+
+
+
+
+
+
+
     </main>
     <footer></footer>
 </body>
