--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             </p>
                         </div>
                     </div>
-                    <img src="./assets/choose.png" alt="choose" class="choose_img">
+                    <img src="./assets/phone.png" alt="choose" class="choose_img">
                     <div class="choos_text-block">
                         <div class="choos_block-right">
                             <h3 class="choos_content-name">Gorgeous design</h3>
@@ -147,6 +147,31 @@
                             </p>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="section_content">
+                <div class="slider_content">
+                    <button class="prevBtn">
+                        <img class="" src="./assets/leftButton.png" alt="leftButton">
+                    </button>
+                    <div class="slider">
+                        <div class="slides">
+                            <div class="slide active">
+                                <img src="./assets/phone.png" alt="Slide 1">
+                            </div>
+                            <div class="slide">
+                                <img src="./assets/phone.png" alt="Slide 2">
+                            </div>
+                            <div class="slide">
+                                <img src="./assets/phone.png" alt="Slide 3">
+                            </div>
+                        </div>
+                    </div>
+                    <button class="nextBtn">
+                        <img class="" src="./assets/rightButton.png" alt="rightButton">
+                    </button>
                 </div>
             </div>
         </section>
