--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
                 <div class="choos_content">
                     <div class="choos_text-block">
                         <div class="choos_block-left">
-                            <h3 class="choos_content-name">Clean code and responsive</h3>
+                            <h3 class="choos_content-name">CLEAN CODE AND RESPONSIVE</h3>
                             <p class="choos_content-text">
                                 Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
                                 leousce viverraelnteger.
                             </p>
                         </div>
                         <div class="choos_block-left">
-                            <h3 class="choos_content-name">CSS3 animations</h3>
+                            <h3 class="choos_content-name">CSS3 ANIMATIONS</h3>
                             <p class="choos_content-text">
                                 Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
                                 leousce viverraelnteger.
                             </p>
                         </div>
                         <div class="choos_block-left">
-                            <h3 class="choos_content-name">Gorgeous design</h3>
+                            <h3 class="choos_content-name">GORGEOUS DESIGN</h3>
                             <p class="choos_content-text">
                                 Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
                                 leousce viverraelnteger.
@@ -129,14 +129,14 @@
                     <img src="./assets/phone.png" alt="choose" class="choose_img">
                     <div class="choos_text-block">
                         <div class="choos_block-right">
-                            <h3 class="choos_content-name">Gorgeous design</h3>
+                            <h3 class="choos_content-name">GORGEOUS DESIGN</h3>
                             <p class="choos_content-text">
                                 Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
                                 leousce viverraelnteger.
                             </p>
                         </div>
                         <div class="choos_block-right">
-                            <h3 class="choos_content-name">Express layout</h3>
+                            <h3 class="choos_content-name">EXPRESS LAYOUT</h3>
                             <p class="choos_content-text">
                                 Proin scelerisque fringilla magna bibendum dui tempor velnteger accumsan fermentum
                                 leousce viverraelnteger.
@@ -157,9 +157,11 @@
             <div class="section_content">
                 <h2 class="slider_title">App Screenshots</h2>
                 <div class="slider_content">
-                    <button class="prevBtn">
-                        <img class="" src="./assets/leftButton.png" alt="leftButton">
-                    </button>
+                    <div class="clider_button">
+                        <button class="prevBtn">
+                            <img class="" src="./assets/leftButton.png" alt="leftButton">
+                        </button>
+                    </div>
                     <div class="slider">
                         <div class="slides">
                             <div class="slide">
@@ -173,9 +175,11 @@
                             </div>
                         </div>
                     </div>
-                    <button class="nextBtn">
-                        <img class="" src="./assets/rightButton.png" alt="rightButton">
-                    </button>
+                    <div class="clider_button">
+                        <button class="nextBtn">
+                            <img class="" src="./assets/rightButton.png" alt="rightButton">
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
