--- a/index.html
+++ b/index.html
@@ -265,11 +265,21 @@
         <div class="section_content">
             <img src="./assets/footer_logo.png" alt="footer_logo" class="footer_logo">
             <div class="footer_icons-block">
-                <img src="./assets/facebook.png" alt="facebook" class="icon_footer">
-                <img src="./assets/twitter.png" alt="twitter" class="icon_footer">
-                <img src="./assets/in.png" alt="in" class="icon_footer">
-                <img src="./assets/youtube.png" alt="youtube" class="icon_footer">
-                <img src="./assets/skype.png" alt="skype" class="icon_footer">
+                <a href="#">
+                    <img src="./assets/facebook.png" alt="facebook" class="icon_footer">
+                </a>
+                <a href="#">
+                    <img src="./assets/twitter.png" alt="twitter" class="icon_footer">
+                </a>
+                <a href="#">
+                    <img src="./assets/in.png" alt="in" class="icon_footer">
+                </a>
+                <a href="">
+                    <img src="./assets/youtube.png" alt="youtube" class="icon_footer">
+                </a>
+                <a href="">
+                    <img src="./assets/skype.png" alt="skype" class="icon_footer">
+                </a>
             </div>
             <p class="footer_text">Copyrights © | All rights reserved.</p>
         </div>
