Firefox, chrome - adapt

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title></title>
+    <title>APPBIES</title>
     <meta charset="utf-8">
     <meta name="description" content="#">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -225,7 +225,7 @@
             <div class="section_content">
                 <h2 class="auth_title">App Support</h2>
                 <div class="auth_content">
-                    <form action="" class="form_content">
+                    <form action="#" class="form_content">
                         <input type="text" placeholder="Full Name" class="auth_input">
                         <input type="email" placeholder="Email" class="auth_input">
                         <input type="tel" placeholder="Phone" class="auth_input">
@@ -284,8 +284,8 @@
             <p class="footer_text">Copyrights © | All rights reserved.</p>
         </div>
     </footer>
+    <script src="./scripts/slider.js"></script>
+    <script src="./scripts/burger_menu.js"></script>
 </body>
-<script src="./scripts/slider.js"></script>
-<script src="./scripts/burger_menu.js"></script>
 
 </html>
